# android-lora-ble-bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPROVEMENTS.md  LORA_CONFIG.md  PROTOCOL_CHANGE_SUMMARY.md  README.md  architecture.md  protocol.md  test_packing
android/: .gitignore  TEST_REPORT.md  build.gradle  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/lora/android/: BleManager.java  GpsManager.java  LoRaForegroundService.java  MainActivity.java  MessageAdapter.java  MessageViewModel.java  PermissionHelper.java
android/app/src/main/java/lora/: Protocol.java
android/app/src/main/res/color/: send_button_icon_color.xml
android/app/src/main/res/drawable/: ic_launcher_round.xml  message_bubble_received.xml  message_bubble_sent.xml  send_button_background.xml
android/app/src/main/res/layout/: activity_main.xml  message_item.xml
android/app/src/main/res/mipmap-mdpi/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: backup_rules.xml
android/app/src/test/java/lora/: ProtocolTest.java
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
esp32/: CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md  platformio.ini
esp32/.cargo/: config.toml
esp32/doc/: IMPLEMENTATION.md  LIGHT_SLEEP.md  QUICKSTART.md
esp32/docs/: DEEP_SLEEP.md  WAKEUP_BUTTONS.md
esp32/include/: BLEManager.h  LEDManager.h  LoRaManager.h  MessageBuffer.h  PowerManager.h  Protocol.h  SleepManager.h  lora_config.h
esp32/src/: BLEManager.cpp  Protocol.cpp  SleepManager.cpp  main.cpp  main.rs  protocol.rs
esp32s3/: Cargo.toml
esp32s3-debugger/: CHANGELOG.md  platformio.ini
esp32s3-debugger/include/: DisplayManager.h  Protocol.h  lora_config.h
esp32s3-debugger/src/: Protocol.cpp  main.cpp
esp32s3/.cargo/: config.toml
esp32s3/src/: ble.rs  lib.rs  lora.rs  protocol.rs
shared/LoRaManager/: LoRaManager.h  lora_config.h
shared/Protocol/: Protocol.cpp
