[package]
name = "esp32-lora"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.17.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-rc.0", features = [
    "esp32s3",
    "unstable",
    "log-04",
] }
esp-alloc = "0.8.0"
lora-phy = "3.0.1"
embedded-hal-bus = "0.3.0"
heapless = "0.8"
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
esp-wifi = { version = "0.15.1", features = ["esp32s3", "ble"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3", "log-04"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-163840"] }
embassy-sync = "0.7.2"
static_cell = "2.1.1"
embassy-time = "0.5.0"
embedded-hal-async = { version = "1.0.0", features = [] }
embedded-hal = { version = "1.0.0", features = [] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
