[package]
edition = "2024"
name = "esp32s3"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp32s3"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
  "defmt",
  "esp32s3",
  "unstable",
] }

esp-rtos = { version = "0.1.1", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32s3"] }
bt-hci = "0.6.0"
embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.16.0", features = [
  "ble",
  "esp-alloc",
  "esp32s3",
  "unstable",
  "defmt",
] }
trouble-host = { version = "0.5.0", features = ["gatt", "defmt"] }
heapless = "0.8"
embassy-futures = "0.1"
static_cell = "2.1.1"
lora-phy = "3.0.1"
embassy-embedded-hal = "0.5.0"
embassy-sync = "0.7.2"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
